# sugar-app

./: .gitignore  README.md  bank_report.xlsx  docker-compose.local.yml  docker-compose.yml
backend/: .env  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_audit_logs.py  0003_kibor_settings_and_tenor.py  0004_kibor_unique_rates.py  0005_loans.py  0006_rate_precision.py
backend/app/: __init__.py  main.py  seed.py
backend/app/api/: deps.py
backend/app/api/routes/: audit.py  auth.py  backfill.py  banks.py  ledger.py  loans.py  rates.py  reports.py  transactions.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: audit_log.py  bank.py  bank_settings.py  loan.py  rate.py  transaction.py  user.py
backend/app/schemas/: audit.py  auth.py  backfill.py  bank.py  date_bounds.py  ledger.py  loan.py  rate.py  transaction.py  user.py
backend/app/services/: audit.py  bank_settings.py  kibor.py  kibor_backfill.py  kibor_sync.py  ledger.py  reports.py
backend/app/utils/: timezone.py
backend/tests/: test_backfill_missing_days.py  test_calculations_precision.py  test_conventional_add_tx_kibor_anchor_row.py  test_conventional_kibor_logic.py  test_conventional_kibor_multi_tranche_markup_lock.py  test_islamic_ledger_kibor_tranches.py  test_islamic_ledger_multiple_principal_debits_rate_steps.py  test_islamic_transaction_kibor_per_tx.py  test_ledger_edge_cases.py  test_ledger_randomized_invariants.py
frontend/: Dockerfile  (+3 more)
(+11 files in other folders)
